WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2006-09-02

	
Version 0.2.1 (under dev!):
   * added some new default key bindings for existing keys (for some OS)
   * command /key now ok with one arg (key name): display key if found
   * fixed bug with CTCP VERSION sent on channels (bug #17547)
   * added current channel completion for /ctcp command
   * fixed bugs in get_buffer_data() which breaks the retrieval of buffer
     content (perl, lua)
   * fixed nicklist display bug when top/bottom (not enough lines) (bug #17537)
   * fixed bug with auto-rejoin of keyed chans (bug #17534)
   * added default nick completion when line starts with '//' (bug #17535)
   * values yes/no accepted (as on/off) for config boolean values (task #5454)
   * added server default notify level (set by /buffer notify on server buffer)
     (task #5634)
   * fixed crashs with /buffer and /charset commands when not connected to any
     server (bug #17525)
   * added special vars $nick/$channel/$server for server_command, alias and
     plugin command handlers
   * added arguments $1,$2,..,$9 and $* for alias (task #5831)
   * added hotlist in session file when using /upgrade command (task #5449)
   * fixed nick refresh problem with unrealircd specific modes: chan owner (~)
     and chan admin (&) (bug #17340)
	
Version 0.2.0 (2006-08-19):
   * added 'C'lear option on IRC raw buffer
   * IRC raw buffer now uses join/part prefix with color to display messages
   * added send of "quit" message to server when using /disconnect
   * fixed "wallops" command when received, now displayed by WeeChat (bug #17441)
   * fixed /wallops command (now many words are correctly sent)
   * fixed command 348 (channel exception list, received by /mode #chan e)
   * added missing modes (channel & user), now all modes are allowed (bug #16606)
   * added "%m" for completion with self nick (on current server)